# ISMI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: refresh-data.yml
config/: ca_cpi_categories.csv  ca_hce_categories.csv  cpi_categories.csv  pce_categories.csv  pce_core_exclusions.csv  sources.yaml  sources_canada.yaml  sources_europe.yaml  sources_japan.yaml  sources_uk.yaml
data/: README.md
docs/: DECISIONS.md  decomp_methodology.md  differences_report.md  methodology.md
extracted-skills/: replicate-econ-paper.skill
extracted-skills/replicate-econ-paper/: SKILL.md
notebooks/: ISM_appendix.ipynb  ISM_europe.ipynb  ISM_expand.ipynb  ISM_replication.ipynb  decomp_replication.ipynb
scripts/: build_and_validate.py  build_decomp.py  build_statcan_manifest.py  export_decomp_data.py  export_web_data.py  fetch_destatis.py  fetch_insee_conso.py  fetch_statcan.py  finalize_categories.py  validate_web_data.py
src/ism/: __init__.py  appendix.py  ca_pipeline.py  controls.py  cpi_pipeline.py  datasources.py  decomp_engine.py  decomp_pipeline.py  decomp_ports.py  decomp_projection.py  decomp_shocks.py  decomp_validate.py  destatis.py  engine.py  estat.py  eu_pipeline.py  eurostat.py  external_data.py  figures.py  forecasting.py  (+11 more)
tests/: test_appendix.py  test_engine.py  test_eu_pipeline.py  test_eurostat.py  test_external.py  test_local_projection.py  test_oos_lasso.py
web/: README.md  app.js  decomp_app.js  decomp_engine.js  decomp_worker.js  engine.js  index.html  styles.css  vercel.json  worker.js
(+17 files in other folders)
