[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ism-replication"
version = "0.1.0"
description = "Readable, portable replication of Lansing & Shapiro (2026), 'Measuring Inflation Shock Momentum' (FRBSF WP 2026-10)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

# src/ layout: the importable package `ism` lives in src/ism.
[tool.setuptools.packages.find]
where = ["src"]

# `ism` becomes a command-line program -> `ism all`, `ism index`, etc.
[project.scripts]
ism = "ism.run:main"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --import-mode=importlib"
testpaths = ["tests"]
